# fastapi-complaint-system

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 239b668dd23d_initial.py  822fdda8d8d8_initial.py  b6d8c7f3ad27_create_table_transaction.py  c0cfe9baa3e1_create_table_transaction.py  c45bedcc7fa1_index_complainer_id.py  d8de83befba2_create_table_transaction.py  f62fea463ca8_initial.py  f88dc6c095bb_amount_is_a_monetary_field.py
src/app/: __main__.py  database.py  exc.py  main.py
src/app/api/: __init__.py  auth.py  complaint.py  deps.py  user.py
src/app/core/: __init__.py  security.py  settings.py
src/app/crud/: __init__.py  base.py  complaint.py  transaction.py  user.py
src/app/models/: __init__.py  base.py  complaint.py  enums.py  token.py  transaction.py  user.py
src/app/services/: s3.py  ses.py  wise.py
