[tool.poetry]
name = "fastapi-complaint-system"
version = "0.1.0"
description = ""
authors = ["Arunanshu Biswas <mydellpc07@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
alembic = "^1.9.3"
aiosqlite = "^0.19.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = {extras = ["dotenv", "email"], version = "^2.0.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
pyjwt = "^2.6.0"
python-multipart = ">=0.0.9,<0.0.10"
asyncclick = "^8.1.3.4"
asyncpg = {version = "^0.29.0", optional = true}
psycopg2-binary = {version = "^2.9.5", optional = true}
boto3 = "^1.26.74"
pyfa-converter = "^1.0.3.0"
apiron = "^7.0.0"
simplejson = "^3.18.3"
tenacity = "^8.2.1"

[tool.poetry.group.dev.dependencies]
types-passlib = "^1.7.7.8"
pdbpp = "^0.10.3"
mypy = "^1.0.1"
boto3-stubs = {extras = ["s3", "ses"], version = "^1.26.77"}
types-simplejson = "^3.18.0.1"
types-requests = "^2.28.11.14"
typing-extensions = "^4.6.2"

[tool.poetry.extras]
postgres = ["psycopg2-binary", "asyncpg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Extra tools for development
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true

show_error_codes = true
pretty = true

warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true

[tool.black]
line-length = 79
target-verson = "py38"

[tool.ruff]
line-length = 79
target-version = "py38"
exclude = ["docs", "tests"]
ignore = ["ANN101", "ANN401"]
select = [
  "ANN",
  "B",
  "E",
  "F",
  "W",
  "RET",
  "EM",
  "UP",
  "C90",
  "PTH",
  "SIM",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 79
profile = "black"
add_imports = ["from __future__ import annotations"]
